<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2" xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <string name="keyboard_ku">Kürtçe</string>
    <string name="keyboard_tr">Türkçe</string>
    <string name="keyboard_ing">İngilizce</string>
    <string name="ime_name">Kurdî Keyboard</string>
    <string name="spell_checker_settings">AnySoftKeyboard Speller Settings</string>
    <string name="copyright_text">Copyright\u0020©\u0020<xliff:g id="year">%d</xliff:g>\u0020<xliff:g id="owner">%s</xliff:g></string>
    <string name="version_text"><xliff:g id="version_name">%s</xliff:g>\u0020(v<xliff:g id="version_number">%s</xliff:g>)</string>
    <string name="debug_tracing_starting">Tracing started!\nMake sure you stop it at some point</string>
    <string name="debug_tracing_starting_failed">Tracing initiating failed! Check logcat for details.</string>
    <string name="debug_tracing_finished">Tracing finished!\nTrace file is
        <xliff:g id="trace_file">%s</xliff:g>
    </string>
    <string name="menu_about_item">About</string>
    <string name="how_to_pointer_title">Welcome to AnySoftKeyboard</string>
    <string name="how_to_pointer_not_app">AnySoftKeyboard is not a regular application - it is a on-screen keyboard
        replacement.
    </string>
    <string name="change_log_card_version_title_template">\u0020\u0020Latest changes for v<xliff:g id="name">%s</xliff:g>\u0020\u0020</string>
    <string name="change_log_entry_header_template_without_name">\u0020\u0020v<xliff:g id="code">%s</xliff:g>\u0020\u0020</string>
    <string name="ime_name_beta">AnySoftKeyboard BETA</string>
    <string name="notification_text_testers">This is a beta version. Use with caution!</string>
    <string name="testers_version">Testers build!</string>
    <string name="languages_cat">Languages</string>
    <string name="changelog">Change Log</string>
    <string name="search_market_for_addons">Search for add-ons</string>
    <string name="search_market_for_keyboard_addons">Get more keyboards at <i>Google Play Store</i>…</string>
    <string name="search_market_for_quick_key_addons">Get more <i>Quick-Text</i> add-ons at <i>Google Play Store</i>…</string>
    <string name="no_market_store_available">Could not find <i>Google Play Store</i> on your device.\nUnable to search for add-ons!</string>
    <string name="keyboard_theme_tweak_group">Tweaks</string>
    <string name="close_button">Close</string>
    <string name="added_word">Saved:\u0020<xliff:g id="word">%s</xliff:g>
    </string>
    <string name="revert_added_word_question">Remove\?</string>
    <string name="removed_word">Removed:\u0020<xliff:g id="word">%s</xliff:g>
    </string>
    <string name="hint_add_to_dictionary">\u2190 Touch again to save</string>
    <string name="hint_double_tap_to_close">Again to remove suggestions</string>
    <string name="ui_group">User interface</string>
    <string-array name="physical_keyboard_change_notification_types">
        <item>Always show layout icon</item>
        <item>On physical keyboard change</item>
        <item>No notification</item>
    </string-array>
    <string name="voice_input_not_installed_title">Voice Is Not Installed</string>
    <string name="voice_input_not_installed_text">Google\'s Voice Input is not installed on your device.\nThat can be easily fixed: install it now from <i>Google Play Store</i>.</string>
    <string name="voice_input_not_installed_action_install">Install</string>
    <string name="voice_input_not_installed_action_do_not_install">No</string>
    <string name="voice_input_not_voice_pack_in_market">I can not find voice input (com.google.android.voicesearch) at <i>Google Play Store</i>. Sorry, voice input will not work on your device.</string>
    <string name="change_ime">Change input method</string>
    <string name="override_dictionary">Override default dictionary</string>
    <string name="override_dictionary_title">Override
        <xliff:g id="word">%s</xliff:g>
        dictionary
    </string>
    <string name="override_dictionary_default">Default</string>
    <string name="override_disabled">Override cleared</string>
    <string name="override_enabled">Overriding to
        <xliff:g id="word">%s</xliff:g>
    </string>
    <string name="gesture_settings">Gestures</string>
    <string name="effects_group">Effects</string>
    <string name="ime_settings">Keyboard settings</string>
    <string name="vibrate_on_key_press_title">Vibrate on key-press</string>
    <string name="vibrate_on_key_press_summary">Vibration level feedback for key-press. Currently: %s</string>
    <string name="vibrate_on_key_press_dialog_title">Select vibration type</string>
    <string-array name="vibrate_on_key_press_types">
        <item>None</item>
        <item>Light</item>
        <item>Medium</item>
        <item>Strong</item>
    </string-array>
    <string name="sound_on">Sound on key-press</string>
    <string name="sound_on_summary">Sound effects on soft keyboard press.</string>
    <string name="use_custom_sound_volume">Set custom volume</string>
    <string name="use_custom_sound_volume_on_summary">Sounds effects volume is custom.</string>
    <string name="use_custom_sound_volume_off_summary">Sounds effects volume is the system\'s notifications volume.
    </string>
    <string name="custom_sound_volume">Custom key-press volume</string>
    <string name="switch_keyboard_on_space">Space switches keyboards</string>
    <string name="switch_keyboard_on_space_on_summary">Switch from symbols/numbers to alphabet when pressing space
    </string>
    <string name="switch_keyboard_on_space_off_summary">Do not switch from symbols/numbers to alphabet when pressing
        space
    </string>
    <string name="one_shot_quick_text_popup">Auto close after key</string>
    <string name="one_shot_quick_text_popup_on_summary">Close Quick-Text popup after pressing a key</string>
    <string name="one_shot_quick_text_popup_off_summary">Keep Quick-Text popup open until Close key is pressed</string>
    <string name="hide_soft_when_physical">Hide keyboard on physical key</string>
    <string name="hide_soft_when_physical_on_summary">Hide soft keyboard when physical keyboard is used</string>
    <string name="hide_soft_when_physical_off_summary">Show soft keyboard when physical keyboard is used</string>
    <string name="fullscreen_input_connection_supported">Use landscape full-screen</string>
    <string name="fullscreen_input_connection_supported_on_summary">Full-screen input in landscape</string>
    <string name="fullscreen_input_connection_supported_off_summary">Do not use full-screen input in landscape</string>
    <string name="fullscreen_portrait_input_connection_supported">Use portrait full-screen</string>
    <string name="fullscreen_portrait_input_connection_supported_on_summary">Full-screen input in portrait</string>
    <string name="fullscreen_portrait_input_connection_supported_off_summary">Do not use full-screen input in portrait
    </string>
    <string name="backword_support">Back-word support</string>
    <string name="backword_support_on_summary">Shifted Backspace will delete the last word</string>
    <string name="backword_support_off_summary">Shifted Backspace will delete the last character</string>
    <string name="swipe_tweak_group">Change swipe gesture actions</string>
    <string name="swipe_up_action">Swipe up</string>
    <string name="swipe_up_action_summary">Define the swipe up gesture action. Currently, %s</string>
    <string name="swipe_up_action_title">Select swipe up action</string>
    <string name="swipe_up_from_spacebar_action">Swipe spacebar up</string>
    <string name="swipe_up_from_spacebar_action_summary">Define the swipe up from spacebar gesture action. Currently, %s</string>
    <string name="swipe_up_from_spacebar_action_title">Select swipe spacebar up action</string>
    <string name="swipe_down_action">Swipe down</string>
    <string name="swipe_down_action_summary">Define the swipe down gesture action. Currently, %s</string>
    <string name="swipe_down_action_title">Select swipe down action</string>
    <string name="swipe_left_action">Swipe left</string>
    <string name="swipe_left_action_summary">Define the swipe left gesture action. Currently, %s</string>
    <string name="swipe_left_action_title">Select swipe left action</string>
    <string name="swipe_right_action">Swipe right</string>
    <string name="swipe_right_action_summary">Define the swipe right gesture action. Currently, %s</string>
    <string name="swipe_right_action_title">Select swipe right action</string>
    <string name="swipe_right_space_bar_action">Space bar swipe right</string>
    <string name="swipe_right_space_bar_action_summary">Define the swipe right from space bar gesture action. Currently, %s</string>
    <string name="swipe_right_space_bar_action_title">Select swipe right action</string>
    <string name="swipe_left_space_bar_action">Space bar swipe left</string>
    <string name="swipe_left_space_bar_action_summary">Define the swipe left from space bar gesture action. Currently, %s</string>
    <string name="swipe_left_space_bar_action_title">Select swipe left action</string>
    <string name="swipe_left_two_fingers_action">Two fingers swipe left</string>
    <string name="swipe_left_two_fingers_action_summary">Define the two-fingers swipe left gesture action. Currently, %s</string>
    <string name="swipe_right_two_fingers_action">Two fingers swipe right</string>
    <string name="swipe_right_two_fingers_action_summary">Define the two-fingers swipe right gesture action. Currently, %s</string>
    <string name="swipe_right_two_fingers_action_title">Select swipe right action</string>
    <string name="pinch_gesture_action">Pinch gesture</string>
    <string name="pinch_gesture_action_title">Select pinch gesture action</string>
    <string name="pinch_gesture_action_summary">Define the pinch gesture action. Currently, %s</string>
    <string name="separate_gesture_action">Stretch gesture</string>
    <string name="separate_gesture_action_title">Select stretch gesture action</string>
    <string name="separate_gesture_action_summary">Define the stretch gesture action. Currently, %s</string>
    <string name="swipe_action_name_none">No action</string>
    <string name="swipe_action_name_next_alphabet">Next alphabet keyboard</string>
    <string name="swipe_action_name_next_symbols">Next symbols keyboard</string>
    <string name="swipe_action_name_next_inside_mode">Next in current mode</string>
    <string name="swipe_action_name_cycle_keyboards">Cycle through all keyboards</string>
    <string name="swipe_action_name_reverse_cycle_keyboards">Reverse cycle through all keyboards</string>
    <string name="swipe_action_name_shift">Shift</string>
    <string name="swipe_action_name_hide">Hide keyboard</string>
    <string name="extension_kbd_top_none">No top row</string>
    <string name="extension_kbd_top_small">Small keys</string>
    <string name="extension_kbd_top_regular">Regular sized keys</string>
    <string name="extension_kbd_top_small_numbers">Numbers keys</string>
    <string name="extension_kbd_top_numbers_alt">Alternate number keys</string>
    <string name="extension_kbd_top_nav">Navigation keys</string>
    <string name="extension_kbd_bottom_regular_with_voice">Regular</string>
    <string name="extension_kbd_bottom_regular">Classic (no mic)</string>
    <string name="extension_kbd_bottom_iphone">iPhone styled (no mic)</string>
    <string name="extension_kbd_bottom_iphone_with_voice">iPhone styled with mic</string>
    <string name="extension_kbd_bottom_alt">Alternate (no mic)</string>
    <string name="extension_kbd_bottom_alt_with_mic">Alternate with mic</string>
    <string name="extension_kbd_bottom_ng">New Generation - Testing</string>
    <string name="extension_kbd_extension_numbers_symbols">Numbers and symbols</string>
</resources>