<?xml version="1.0" encoding="UTF-8"?>
<ExtensionKeyboards>
    <!-- top rows -->
    <ExtensionKeyboard
        description=""
        extensionKeyboardResId="0"
        extensionKeyboardType="@integer/extension_keyboard_type_top_row"
        id="82910c70-ded1-11e0-9572-0800200c9a66"
        index="1"
        nameResId="@string/extension_kbd_top_none" />
    <ExtensionKeyboard
        description=""
        extensionKeyboardResId="@xml/ext_kbd_top_row_small"
        extensionKeyboardType="@integer/extension_keyboard_type_top_row"
        id="5d945f40-ded5-11e0-9572-0800200c9a66"
        index="2"
        nameResId="@string/extension_kbd_top_small" />
    <ExtensionKeyboard
        description=""
        extensionKeyboardResId="@xml/ext_kbd_top_row_normal"
        extensionKeyboardType="@integer/extension_keyboard_type_top_row"
        id="642e9690-ded5-11e0-9572-0800200c9a66"
        index="3"
        nameResId="@string/extension_kbd_top_regular" />
    <ExtensionKeyboard
        description=""
        extensionKeyboardResId="@xml/ext_kbd_top_row_numbers"
        extensionKeyboardType="@integer/extension_keyboard_type_top_row"
        id="1fae0220-ded6-11e0-9572-0800200c9a66"
        index="4"
        nameResId="@string/extension_kbd_top_small_numbers" />
    <ExtensionKeyboard
        description=""
        extensionKeyboardResId="@xml/ext_kbd_top_row_numbers_alt"
        extensionKeyboardType="@integer/extension_keyboard_type_top_row"
        id="69520BA1-7EB1-424B-B5C5-C3C4857E53FE"
        index="5"
        nameResId="@string/extension_kbd_top_numbers_alt" />
    <ExtensionKeyboard
        description=""
        extensionKeyboardResId="@xml/ext_kbd_top_row_nav"
        extensionKeyboardType="@integer/extension_keyboard_type_top_row"
        id="E797771E-F8CF-4684-96CB-3546A54A7A10"
        index="6"
        nameResId="@string/extension_kbd_top_nav" />

    <!-- bottom rows -->
    <ExtensionKeyboard
        description=""
        extensionKeyboardResId="@xml/ext_kbd_bottom_row_regular_with_voice"
        extensionKeyboardType="@integer/extension_keyboard_type_bottom_row"
        id="09f8f280-dee2-11e0-9572-0800200c9a66"
        index="1"
        nameResId="@string/extension_kbd_bottom_regular_with_voice" />
    <ExtensionKeyboard
        description=""
        extensionKeyboardResId="@xml/ext_kbd_bottom_row_regular"
        extensionKeyboardType="@integer/extension_keyboard_type_bottom_row"
        id="09f8f280-dee2-11e0-9572-0800200c9a55"
        index="2"
        nameResId="@string/extension_kbd_bottom_regular" />
    <ExtensionKeyboard
        description=""
        extensionKeyboardResId="@xml/ext_kbd_bottom_row_iphone_with_mic"
        extensionKeyboardType="@integer/extension_keyboard_type_bottom_row"
        id="3659b9e0-dee2-11e0-9572-0800200c9a66"
        index="3"
        nameResId="@string/extension_kbd_bottom_iphone_with_voice" />
    <ExtensionKeyboard
        description=""
        extensionKeyboardResId="@xml/ext_kbd_bottom_row_iphone"
        extensionKeyboardType="@integer/extension_keyboard_type_bottom_row"
        id="3659b9e0-dee2-11e0-9572-0800200c9a55"
        index="4"
        nameResId="@string/extension_kbd_bottom_iphone" />
    <ExtensionKeyboard
        description=""
        extensionKeyboardResId="@xml/ext_kbd_bottom_row_alt_with_mic"
        extensionKeyboardType="@integer/extension_keyboard_type_bottom_row"
        id="3DFFC2AD-8BC8-47F3-962A-918156AD8DD0"
        index="5"
        nameResId="@string/extension_kbd_bottom_alt_with_mic" />
    <ExtensionKeyboard
        description=""
        extensionKeyboardResId="@xml/ext_kbd_bottom_row_alt"
        extensionKeyboardType="@integer/extension_keyboard_type_bottom_row"
        id="59295DFF-4A34-4DC9-86E1-8844F56F6858"
        index="6"
        nameResId="@string/extension_kbd_bottom_alt" />
    <ExtensionKeyboard
        description=""
        extensionKeyboardResId="@xml/ext_kbd_bottom_row_ng"
        extensionKeyboardType="@integer/extension_keyboard_type_bottom_row"
        id="d8657c90-d910-11e2-a28f-0800200c9a66"
        index="7"
        nameResId="@string/extension_kbd_bottom_ng" />

    <!-- top extension keyboards -->
    <ExtensionKeyboard
        description=""
        extensionKeyboardResId="@xml/ext_kbd_ext_keyboard_numbers_symbols"
        extensionKeyboardType="@integer/extension_keyboard_type_extension_keyboard"
        id="6f1ecea0-dee2-11e0-9572-0800200c9a66"
        index="2"
        nameResId="@string/extension_kbd_extension_numbers_symbols" />
</ExtensionKeyboards>